--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "author": "carnivel",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "joi": "^17.13.3",
+    "moment-timezone": "^0.5.46",
     "uuid": "^11.0.3",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
